  - Prevent recording rule padding values from exceeding specified limits (1 hour for start padding, 3 hours for end padding)
  - Fix bug that incorrectly set recording rule padding values to 30 seconds instead of zero seconds when specified as "0 min" in Kodi
  - Fix "Unable to resolve timer type" errors reported in Kodi log when adding recording rules due to missing timer capabilities flag

v4.5.1 (2021.04.09)
  - Update SQLite database engine to version 3.35.4
  - Update cURL library to version 7.76.0
  - Fix bug preventing timer rules assigned a specific channel number to be changed back to 'Any channel'
  - Change how start and end times are reported for Record series timer rules so they show as 'Any day at any time'
  - Apply workaround for Kodi error 'In order to add/update a timer the end date and time...' when editing a Record series rule

v4.5.0 (2021.03.16)
  - Update SQLite database engine to version 3.35.1
  - Update cURL library to version 7.75.0
  - Fix bug that could cause unnecessary triggering of both channel and channel group updates
  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
  - Fix bug preventing Electronic Program Guide (EPG) data from updating when Kodi Guide 'Future days to display' setting has changed
  - Fix bug preventing timers and timer rules from updating when Kodi Guide 'Future days to display' setting has changed
  - Fix bug preventing Electronic Program Guide (EPG) entries from being flagged as new
  - Omit reporting of new indicator for programs of type News/Current Affairs unless a specific season/episode is specified
  - Rename "Append repeat indicators to applicable recording names" Interface option to "Append repeat indicators to Recorded TV episode names"
  - Add new "Append repeat indicators to EPG episode names" Interface option
  - Add new "Radio Channels" settings category and associated options to enable radio channel mapping

v4.4.1 (2021.02.06)