@@ -3,6 +3,7 @@ v4.5.2 (2021.05.xx)
   - Prevent recording rule padding values from exceeding specified limits (1 hour for start padding, 3 hours for end padding)
   - Fix bug that incorrectly set recording rule padding values to 30 seconds instead of zero seconds when specified as "0 min" in Kodi
   - Fix "Unable to resolve timer type" errors reported in Kodi log when adding recording rules due to missing timer capabilities flag
+  - Apply channel logo image associated with a recording as the icon for that recording when available
 
 v4.5.1 (2021.04.09)
   - Update SQLite database engine to version 3.35.4
